# zero-cache-chart

./: .gitignore  .helmignore  Chart.yaml  README.md  chart.nix  flake.nix  pyproject.toml  values.yaml  version_manager.py
.github/: renovate.json
.github/workflows/: ci.yml  create-version-branch.yml  publish-flakehub.yml  update-flake-lock.yml  update-versions.yml  version-management.yml
docs/plans/: 2026-03-04-project-revival-design.md  2026-03-04-project-revival-plan.md  2026-03-04-version-aware-chart-design.md  2026-03-04-version-aware-chart-plan.md
examples/: single-node.yaml
src/zero_cache_chart/: chart.py  cli.py  docker.py  git.py  oci.py  types.py  versions.py
templates/: NOTES.txt  _helpers.tpl  headless-service.yaml  ingress.yaml  litestream-configmap.yaml  pdb.yaml  persistent-volume-claims.yaml  replication-manager-statefulset.yaml  secrets.yaml  serviceaccount.yaml  services.yaml  single-node-deployment.yaml  single-node-pvc.yaml  view-syncer-deployment.yaml  view-syncer-hpa.yaml  view-syncer-statefulset.yaml
tests/: test_chart.py  test_cli.py  test_docker.py  test_git.py  test_oci.py  test_versions.py
