[project]
name = "zero-cache-chart"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "semver>=3.0.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "responses>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zero_cache_chart"]

[project.scripts]
zero-cache-chart = "zero_cache_chart.cli:main"
